[package]
name = "kcov-coverage-fix"
version = "0.1.0"
authors = ["Kogia-sima <orcinus4627@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.17.0"

[dependencies.regex]
version = "1.3.1"
default-features = false
features = ["std", "unicode-perl"]
