[package]
name = "rust-covfix"
version = "0.1.1"
authors = ["Kogia-sima <orcinus4627@gmail.com>"]
description = "Fix Rust coverage data based on source code"
homepage = "https://github.com/Kogia-sima/rust-covfix"
repository = "https://github.com/Kogia-sima/rust-covfix"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["grcov", "lcov", "coverage"]
edition = "2018"

[[bin]]
name = "rust-covfix"
path = "src/main.rs"
test = false
required-features = ["cli"]

[lib]
name = "rust_covfix"
path = "src/lib.rs"
doctest = false

[features]
default = ["cli", "lcov"]
cli = ["argparse"]
noinline = []
lcov = []
backtrace = ["error-chain/backtrace"]

[dependencies]
argparse = { version = "0.2.2", optional = true }
error-chain = { version = "0.12.2", default-features = false }

[dependencies.regex]
version = "1.3.6"
default-features = false
features = ["std", "unicode-perl", "perf-dfa", "perf-inline"]

[dev-dependencies]
tempfile = "3.1.0"
