[package]
name = "rust-covfix"
version = "0.2.2"
authors = ["Kogia-sima <orcinus4627@gmail.com>"]
description = "Fix Rust coverage data based on source code"
homepage = "https://github.com/Kogia-sima/rust-covfix"
repository = "https://github.com/Kogia-sima/rust-covfix"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["grcov", "lcov", "coverage"]
edition = "2018"

[[bin]]
name = "rust-covfix"
path = "src/main.rs"
test = false
required-features = ["cli"]

[lib]
name = "rust_covfix"
path = "src/lib.rs"
doctest = false

[features]
default = ["cli", "lcov", "parallel"]
cli = ["argparse"]
noinline = []
lcov = []
backtrace = ["error-chain/backtrace"]
parallel = ["scoped_threadpool", "num_cpus"]

[dependencies]
argparse = { version = "0.2.2", optional = true }
error-chain = { version = "0.12.2", default-features = false }
scoped_threadpool = { version = "0.1.9", optional = true }
num_cpus = { version = "1.13.0", optional = true }

[dependencies.syn]
version = "1.0.17"
default-features = false
features = ["parsing", "visit", "full"]

[dependencies.proc-macro2]
version = "1.0.10"
default-features = false
features = ["span-locations"]

[dev-dependencies]
tempfile = "3.1.0"
pretty_assertions = "0.6.1"
